tests/paczka1/fuzzy1/49132082.err
Error in line 17: 3qSt A396 -1,6
Error in line 4: A135 S330 16,9
Error in line 14: 3qSt A396 22,2
Error in line 21: 3qSt S330 42,3
Error in line 28: A135 S330 78,7
Error in line 29: A135 A396 0,5
